Added services and routing

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   </head>
 
   <body>
+    <base href="/"> <!-- Setting base route-->
     <my-app>Loading AppComponent content here ...</my-app>
   </body>
 </html>
